--- a/src/app/shared/shared-components/button/button.component.css
+++ b/src/app/shared/shared-components/button/button.component.css
@@ -98,9 +98,6 @@
     background: var(--Colors-Shades-30---Light, #EBF7EF) !important;
 }
 
-.wasdi-btn-sm>span.material-symbols-outlined {
-    font-size: 20px !important;
-}
 
 .wasdi-btn>span.material-symbols-outlined {
     font-size: 20px !important;
